added more testing notes

--- a/notes/3. Testing.md
+++ b/notes/3. Testing.md
@@ -1,4 +1,6 @@
 # Mon 01 /25 - Testing
+
+## Introduction
 Testing is important to know that code works. Following TDD principles, you should write the tests first, make them fail, then write the code to make them succeed
 
 Red -> Green -> Refactor
@@ -7,7 +9,7 @@ Write a test method to test functionality, implement it to make it pass
 
 Repeat for every new method
 
-### Test sort() method:
+## Test sort() method:
 ```java
 public static void testSort(){
     input = {b, a, d}
@@ -40,7 +42,7 @@ public static void testSort() {
 ```
 
 
-### Selection Sort:
+## Selection Sort:
 Simplest sorting method.
 
 O(n^2) time
@@ -48,23 +50,23 @@ O(n^2) time
 Find lowest number and swap to left side, increment left ptr, continue until fully sorted
 
 
-### Recursive selection sort
+## Recursive selection sort
 Since Java doesn't have array slicing, we need a helper method to pass in the index of the start for the array. 
 
 Increment the index 
 ```java
-sort(arr) {
+public static void sort(arr) {
     sort(arr, 0) // helper method
 }
 /** sort helper that sorts from an index onwards */
-sort(arr, start) {
+public static void sort(arr, start) {
     findSmallest
     swap(arr, start, smallest)
     sort(arr, start+1)
 }
 ```
 
-### Debugging Process:
+## Debugging Process:
 Use debugger to view the states
 
 For cs61b specifically, can use java visualizer to visualize classes, variables, pointers, etc.
@@ -72,5 +74,21 @@ For cs61b specifically, can use java visualizer to visualize classes, variables,
 Make change to fix the bug in the code, then fix the test and make sure they pass
 
 
+## Worst way to approach programming:
+- Read and understand spec
+- Write entire program
+- Compile and fix compiler errors
+- Test with autograder, get errors
+- Repeat until fixed:
+    - Add print statements
+    - Make changes
+    - Run autograder
+
+This is slow and unsafe!
+
 ## Summary:
-Testing is effective, use debugger more often. Test a method, make it fail, write the code to make it pass, and repeat for every new method. Use JUnit testing library for ease (like method to compare objects instead of doing it yourself)
+Testing is effective, and makes sure your code works. Use debugger to visualize what is wrong. 
+
+Test a method, make it fail, write the code to make it pass, and repeat for every new method. Use JUnit testing library for ease (like method to compare objects instead of doing it yourself)
+
+Write tests but only when they're useful
