finished week 2, discussion, lab2

--- a/notes/3. Testing.md
+++ b/notes/3. Testing.md
@@ -5,9 +5,11 @@ Testing is important to know that code works. Following TDD principles, you shou
 
 Red -> Green -> Refactor
 
-Write a test method to test functionality, implement it to make it pass
+Write a test method to test functionality, 
 
-Repeat for every new method
+implement it to make it pass
+
+(optional) Refactor to make it leaner, faster, simpler
 
 ## Test sort() method:
 ```java
@@ -67,10 +69,8 @@ public static void sort(arr, start) {
 ```
 
 ## Debugging Process:
-Use debugger to view the states
-
-For cs61b specifically, can use java visualizer to visualize classes, variables, pointers, etc.
-
+Use debugger to view the states\
+For cs61b specifically, can use java visualizer to visualize classes, variables, pointers, etc.\
 Make change to fix the bug in the code, then fix the test and make sure they pass
 
 
@@ -86,9 +86,12 @@ Make change to fix the bug in the code, then fix the test and make sure they pas
 
 This is slow and unsafe!
 
+## Integration Testing:
+Unit testing is testing the methods in isolation\
+Integration testing tests the interactions between different systems.
+
 ## Summary:
-Testing is effective, and makes sure your code works. Use debugger to visualize what is wrong. 
-
-Test a method, make it fail, write the code to make it pass, and repeat for every new method. Use JUnit testing library for ease (like method to compare objects instead of doing it yourself)
-
-Write tests but only when they're useful
+Testing is effective, and makes sure your code works. Use debugger to visualize what is wrong. \
+Test a method, make it fail, write the code to make it pass, and repeat for every new method. Use JUnit testing library for ease (like method to compare objects instead of doing it yourself)\
+Write tests but only when they're useful\
+Testing gamifies the programming process because we get joy from making tests pass.
