--- a/notes/8. Inheritance, Implements.md
+++ b/notes/8. Inheritance, Implements.md
@@ -1,6 +1,7 @@
 # Inheritance, Implements
 
 ## Inheritance
+Reusing existing code by enabling subclasses or child class to inherit methods from superclass or parent class through the use of Overloading and Overriding methods. 
 
 ### Overloading
 Java methods of same name but different parameters.\
