finished 03/03 red black trees

--- a/notes/18. Red Black Trees.md
+++ b/notes/18. Red Black Trees.md
@@ -1,2 +1,184 @@
 # Red Black Trees
 
+## Rotating Trees
+While B-Trees are balanced, they are hard to implement cause you need to keep track of different nodes, and splitting them is complicated
+
+We know that different orders of inserting elements will result in a different BST\
+However, insertion is not the only way to yield different structures for the same BST.\
+We can change the tree with the nodes already in place through a process called **rotating**
+
+`rotateLeft(G): Let x be the right child of G. Make G the new left child of x.`\
+`rotateRight(G): Let x be the left child of G. Make G the new right child of x.`
+
+Implementations
+```java
+private Node rotateRight(Node h) {
+    // assert (h != null) && isRed(h.left);
+    Node x = h.left;
+    h.left = x.right;
+    x.right = h;
+    return x;
+}
+
+// make a right-leaning link lean to the left
+private Node rotateLeft(Node h) {
+    // assert (h != null) && isRed(h.right);
+    Node x = h.right;
+    h.right = x.left;
+    x.left = h;
+    return x;
+}
+
+```
+
+example:\
+```
+    6
+  1   8
+   4   9    rotateLeft(9)
+        13 
+          17
+
+becomes:
+
+     6
+  1    8   
+    4    13
+        9   17
+```
+
+Rotation is useful for shortening or lengthing a tree while preserving the tree property. You can also use rotation to balance a tree. Given a tree that is stringy, you can keep rotating until you get a bushy tree, and thus is balanced
+
+## Red Black Trees
+Recap: Types of search trees seen so far
+- Binary Search Trees
+- B-Trees
+
+We like B-Trees b/c it stays balanced, but too hard to implement. What if we create a tree that is implemented using a BST but is identical to B-Tree and thus stays balanced?
+
+Red-Black Tree!\
+First, look at B-Tree and ask how we can modify it such that it's a BST\
+B-Tree with nodes w/ 2 children is already BST! If 3 nodes or more, could create a "glue" node that holds no info but only serves to show that its 2 children are part of 1 node, thus hiding away any additional nodes
+
+This is very inelegant b/c taking up more space and code will be ugly. Instead, use "glue" links!\
+Create an edge such that nodes will only have 2 children while maintaining BST property
+
+### Left Leaning Red Black BST (LLRB)
+Create the "glue" link always to the left. This is left leaning
+
+```
+B-Tree:
+       (u w)
+  (a s) (v) (x y)
+
+LLRB:
+        w
+      u     y
+    s  v  x  
+   a
+```
+Glue links being w-u, y-x, s-a
+
+LLRB Properties
+- 1-1 correspondence w/ B-trees
+- No node has 2 red links
+- There are no red right links
+- Every path from root to leaf has same depth (b/c of B-tree property)
+- Height is no more than 2x height of corresponding B-Tree
+
+LLRB Implementation:
+- Building a B-tree and then converting it is more complex
+- Instead, use a BST and insert as normal, but use 0 or more rotations to maintain 1-1 mapping of B-tree
+
+### 1-1 Mapping
+LLRB must maintain 1-1 mapping with corresponding B-Tree
+
+Design:
+- Always add red link on left of node
+- Since red links aren't allowed on right of node, how do we add node to the right? Use **rotation** to maintain left link 
+- For double insertion on the left, your subtree looks like a left leaning linked list. To resolve this, rotate the node such that you have left and right red links and looks like balanced tree. Since we can't have red link on right, this is called temporary and see below on how to resolve it
+- Splitting temp 4 nodes (when you have red link for left and right node). To resolve, color "flip" the tree. The tree remains the same, but the 2 red links turn black and the parent's node to grandparent node becomes a single left leaning red link
+
+### Red Black Tree operations
+In Summary:\
+- When inserting: use a red link
+- If there is a right leaning "3-node", this is **left leaning violation**
+    - Rotate left the appropriate node to fix
+- If there are 2 consecutive left links, this is **4 Node violation**
+    - Rotate right the node to fix
+- If there are any nodes w/ 2 children, this is **Temporary 4 node**
+    - Color flip the node to emulate the split operation
+
+### Red Black Tree insertion example
+```
+Insert(7)
+       7
+
+Insert(6)
+        7
+     red
+    6
+
+Insert(5)
+        7
+     red
+    6
+    red
+   5
+This is 4 node violation, rotate 7 so 6 becomes new root
+
+rotateRight(7)
+         6
+      red red 
+     5      7
+Temporary 4 node (right red link), so flip them
+
+flip(6)
+         6
+        5 7 
+
+Insert(4)
+          6  
+        5   7
+        red
+       4
+
+Insert(3)
+          6  
+        5   7
+        red
+       4
+       red
+      3
+Same violation as before
+
+Rotate(5)
+
+and etc.. until you get fully balanced tree
+```
+
+### LLRB Runtime analysis
+- LLRB tree has height O(log N)
+- Contains is O(log N)
+- Insert is O(log N)
+    - Add new node: O(log N)
+    - Rotate and color flip operations per insert: O(log N)
+
+Turning BST into an LLRB requires only 3 lines of code
+```java
+private Node put(...) {
+    ...
+    if (isRed(h.right) && !isRed(h.left)) { h = rotateLeft(h);}     // right red link, left leaning violation
+    if (isRed(h.left) && isRed(h.left.left)) { h = rotateRight(h);} // 2 left red links, 4 node violation
+    if (isRed(h.right) && isRed(h.left)) { flipColors(h);}          // red right and left links, flip them
+}
+```
+
+
+## Summary: Search Trees
+- Binary search trees are simple but subject to imbalance trees
+- B-Trees are balanced but painful to implement and slow
+- Red Black Trees and specifically Left Leaning Red Black Trees (LLRB) ensure balanced tree without needing to implement B-Tree. insertion is simple (but delete is hard)
+    - Note Java's TreeMap is a red black tree (not left leaning) 
+        - More complex but faster (?)
+
